# regress-pro

./: .buildinfo  .gitignore  AUTHORS  Aluminium McPeak Kramers.dsp  CMakeLists.txt  Copper Babar Kramers.dsp  F055-list.csv  Ge LETI Kramers.dsp  INSTALL  Makefile  README.rst  batch.c  batch.h  build-x86-64.lhelper  build.lhelper  cmpl.c  cmpl.h  common.c  common.h  covariance_analysis.c  covariance_analysis.h  data-table.c  data-table.h  data-view.c  data-view.h  debian-package-build.sh  defs.h  descr-util.c  descr-util.h  descr.c  descr.h  descr.y  disp-bruggeman.c  disp-bruggeman.h  disp-cauchy.c  disp-cauchy.h  disp-fb-priv.h  disp-fb.c  disp-fb.h  disp-fit-engine.c  (+112 more)
EASTL/source/: Makefile
F055_CMPPMD/: OPT-RECIPE-055PMD-v5-RELEASE.fit  TEST-RECIPE.fit
_sources/: documentation.txt
_static/: default.css
assets/: greenstyle-print.css  greenstyle.css
debian/: build.sh  control  regress-pro.desktop
dispers/: si_paper.mat  siuv.mat
doc/: autogen-kramers.sh  autogen-tauc-lorentz.sh  conf.py  ellipsometry-notes.tex  genindex.html  index.html  intro.html  intro.rst  kk-ho-2nd-order-compute.cpp  kk-ho-compute.cpp  kk-ho-first-order-deriv-compute.cpp  kk-kramers-test-compute.cpp  kramers-diff-sympy.py  kramers-sympy.py  kramers.py  kramers_model.py  meson.build  models.html  models.rst  multi-layer-rel-aoi-derivatives.tex  objects.inv  regress-pro-manual.tex  search.html  searchindex.js  tauc-lorentz-diff-sympy.py  tauc-lorentz-parameters-deriv.py  tauc-lorentz-sympy.py  tauc-lorentz.html  tauc_lorentz.py
doc/figure/: oxide-fit-1.eps  script-window.eps
examples/: Jellison-Silicon.mat
examples/filmetrics/: Unknown-18-74-110-237.csv  spectre substrat verre avec quartz.txt
examples/fsg-doped-oxide-reflectometer/: FSG thickness and RI.rcp
examples/multi-fit/: Oxide Nit Multi Sample Optimization.rcp  Oxide Nit Optimized.rcp  multi-fit-example.fit  multi-sample-fit.rcp  optimized-recipe.rcp  simple-fit.fit
examples/resist-ellipsometry/: Resist PFI thickness.rcp  resist-example.fit
fit/: fsg-thick-example.fit  oxide thin test.fit  oxide-example-cauchy.fit  oxide-example-ho.fit  oxide-example.fit  pfi-resist-example.fit  resist-example.fit
fox-gui/: BatchDialog.cpp  BatchDialog.h  DispersDialog.cpp  DispersDialog.h  DispersWin.cpp  DispersWin.h  EllissApp.h  EllissGui.cpp  EllissGui.h  InteractiveFit.cpp  InteractiveFit.h  Makefile  ProgressInfo.cpp  ProgressInfo.h  SpectrRangeWin.cpp  SpectrRangeWin.h  Strcpp.h  agg_plot.h  agg_plot_array.h  agg_units.h  batch_engine.cpp  batch_engine.h  batch_window.cpp  batch_window.h  canvas.h  colors.cpp  colors.h  dataset_table.cpp  dataset_table.h  dataset_window.cpp  dataset_window.h  disp-bruggeman-components.h  disp-components.h  disp-lookup-components.cpp  disp-lookup-components.h  disp_chooser.cpp  disp_chooser.h  disp_fit_manager.h  disp_fit_window.cpp  disp_fit_window.h  (+96 more)
libcanvas/: agg_pixfmt_rgb24_lcd.h  meson.build  plot.cpp  plot.h  window_surface.cpp  window_surface.h
new-docs/: Makefile  conf.py  index.rst  intro.rst  models.rst  tauc-lorentz.rst
scripts/: cspline-opt.lua
src/: DataTable.cpp  DataTable.h  DispersionTable.cpp  DispersionTable.h  HODispersion.cpp  HODispersion.h  InterpolationTable.cpp  InterpolationTable.h  Lexer.cpp  Lexer.h  Makefile  MatrixArray.h  Writer.cpp  Writer.h  acquisition.c  acquisition.cpp  acquisition.h  batch.c  batch.h  cmpl.cpp  cmpl.h  common.c  common.cpp  common.h  data-table.cpp  data-table.h  data-view.c  data-view.cpp  data-view.h  defs.h  disp-bruggeman.c  disp-bruggeman.cpp  disp-bruggeman.h  disp-cauchy.c  disp-cauchy.cpp  disp-cauchy.h  disp-deriv-check.cpp  disp-deriv-check.h  disp-fb-priv.h  disp-fb.c  (+162 more)
test/: Makefile  gui-test.c
tests/: nitride-ho-th-ri.script  nitride-on-ge-soi.script  nitride-oxide-sti-th.script  nitride-th-grid.script  nitride-th-ri.script  nitride-th.script  run-test.py  teos-nitride-pmd-nisi.script  thermal-nitride-6um-soi.script
tests/expect/: cmp-nitride-mbit-th-10layers.txt  cmp-nitride-mbit-th-ri-10layers.txt  cmp-nitride-mbit-th-ri.txt  cmp-nitride-mbit-th.txt  nitride-ho-th-ri.txt  nitride-on-ge-soi.txt  nitride-oxide-sti-th.txt  nitride-th-grid.txt  nitride-th-ri.txt  nitride-th.txt  si-implant-bilayer-cr2-model.txt  teos-nitride-pmd-nisi.txt  thermal-nitride-6um-soi.txt
tests/low-accuracy/: cmp-nitride-mbit-th-10layers.script  cmp-nitride-mbit-th.script  si-implant-bilayer-cr2-model.script
tests/nitride-sti-se/: 01-nitride-th.txt  02-nitride-th-ri.txt  03-nitride-th-grid.txt  nitride-th-ri.rcp
tests/no-accuracy/: cmp-nitride-mbit-th-ri-10layers.script  cmp-nitride-mbit-th-ri.script
tests/recipes/: cmp-nitride-mbit-th-10layers.rcp  cmp-nitride-mbit-th-ri-10layers.rcp  cmp-nitride-mbit-th-ri.rcp  cmp-nitride-mbit-th.rcp  nitride-ho-th-ri.rcp  nitride-on-ge-soi.rcp  nitride-oxide-2500A-th.rcp  nitride-th-grid.rcp  nitride-th-ri.rcp  nitride-th.rcp  si-implant-bilayer-cr2-model.rcp  si-implant-bilayer-r2-model.rcp  teos-nitride-pmd-nisi.rcp  thermal-nitride-6um-soi.rcp
