agg_dep = dependency('libagg')
libcanvas_incdir = include_directories('.')

libcanvs_src = [
    'agg_font_freetype.cpp',
    'agg_font_freetype.h',
    'agg_pixfmt_rgb24_lcd.h',
    'agg_win32_bmp.cpp',
    'canvas.h',
    'canvas_svg.cpp',
    'canvas_svg.h',
    'categories.h',
    'colors.h',
    'defs.h',
    'draw_svg.cpp',
    'draw_svg.h',
    'factor_labels.h',
    'fatal.cpp',
    'fatal.h',
    'image_buf.h',
    'list.h',
    'markers.cpp',
    'markers.h',
    'meson.build',
    'my_conv_simple_marker.h',
    'path.h',
    'pixel_fmt.h',
    'plot-auto.h',
    'plot_axis.cpp',
    'plot_axis.h',
    'plot.cpp',
    'plot.h',
    'plot_style.h',
    'printf_check.cpp',
    'printf_check.h',
    'pthreadpp.h',
    'rect.h',
    'render_config.cpp',
    'render_config.h',
    'rendering_buffer_utils.h',
    'resource-manager.h',
    'sg_element.h',
    'sg_object.h',
    'text.cpp',
    'text.h',
    'text_label.h',
    'trans.h',
    'units.cpp',
    'units.h',
    'utils.cpp',
    'utils.h',
    'window_part.cpp',
    'window_part.h',
    'window_surface.cpp',
    'window_surface.h',
    'x_connection.cpp',
    'x_connection.h',
    'x_image.h',
]

libcanvas = static_library('libcanvas', libcanvs_src, dependencies: [agg_dep])
